--- a/.config/wlogout/style.css
+++ b/.config/wlogout/style.css
@@ -16,6 +16,9 @@ button {
 	margin: 2rem;
 	border-radius: 2rem;
 	padding: 2rem;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 15%;
 }
 
 button:focus,
@@ -23,4 +26,29 @@ button:active,
 button:hover {
 	background-color: rgba(51, 51, 51, 0.5);
 	border-radius: 4rem;
+	outline-style: none;
+}
+
+#lock {
+    background-image: image(url("/usr/share/wlogout/icons/lock.png"), url("/usr/share/wlogout/icons/lock.png"));
+}
+
+#logout {
+    background-image: image(url("/usr/share/wlogout/icons/logout.png"), url("/usr/local/share/wlogout/icons/logout.png"));
+}
+
+#suspend {
+    background-image: image(url("/usr/share/wlogout/icons/suspend.png"), url("/usr/local/share/wlogout/icons/suspend.png"));
+}
+
+#hibernate {
+    background-image: image(url("/usr/share/wlogout/icons/hibernate.png"), url("/usr/local/share/wlogout/icons/hibernate.png"));
+}
+
+#shutdown {
+    background-image: image(url("/usr/share/wlogout/icons/shutdown.png"), url("/usr/local/share/wlogout/icons/shutdown.png"));
+}
+
+#reboot {
+    background-image: image(url("/usr/share/wlogout/icons/reboot.png"), url("/usr/local/share/wlogout/icons/reboot.png"));
 }
